--- a/src/vehicle_nav/threat_ranking/CMakeLists.txt
+++ b/src/vehicle_nav/threat_ranking/CMakeLists.txt
@@ -5,10 +5,10 @@
 set(TRANKING_LIB_SRC
     src/topogeo_graph.cpp
     src/motion_model.cpp
-    src/threat_ranking.cpp
+    # src/threat_ranking.cpp
 )
 add_library(rank STATIC ${TRANKING_LIB_SRC})
-target_link_libraries(rank decomp graph road tflow lattice lightviz)
+target_link_libraries(rank decomp graph roadmap tfield lattice lattice_planner lightviz)
 target_include_directories(rank PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
