--- a/src/vehicle_nav/threat_ranking/tests/CMakeLists.txt
+++ b/src/vehicle_nav/threat_ranking/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(test_topogeo_graph test_topogeo_graph.cpp)
 target_link_libraries(test_topogeo_graph rank lightviz utilities)
 
 add_executable(test_threat_model test_threat_model.cpp)
-target_link_libraries(test_threat_model road rank tfield lightviz utilities)
+target_link_libraries(test_threat_model rank lightviz utilities)
 
-add_executable(test_threat_ranking test_threat_ranking.cpp)
-target_link_libraries(test_threat_ranking road rank tfield lightviz utilities)
+# add_executable(test_threat_ranking test_threat_ranking.cpp)
+# target_link_libraries(test_threat_ranking road rank tfield lightviz utilities)
