--- a/src/core/lightviz/tests/CMakeLists.txt
+++ b/src/core/lightviz/tests/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(test_grid_viz lightviz)
 add_executable(test_polygon_viz test_polygon_viz.cpp )
 target_link_libraries(test_polygon_viz lightviz)
 
+add_executable(test_field_viz test_field_viz.cpp )
+target_link_libraries(test_field_viz lightviz)
+
 # add_executable(test_glfw_gui test_glfw_gui.cpp )
 # target_link_libraries(test_glfw_gui lightviz glfw)
 
