--- a/src/vehicle_nav/CMakeLists.txt
+++ b/src/vehicle_nav/CMakeLists.txt
@@ -48,5 +48,7 @@ add_subdirectory(threat_ranking)
 # add_subdirectory(traffic_flow)
 add_subdirectory(traffic_sim)
 
+add_subdirectory(vehicle_viz)
+
 
 
