topogeo graph can be generated automatically now

--- a/src/vehicle_nav/road_map/CMakeLists.txt
+++ b/src/vehicle_nav/road_map/CMakeLists.txt
@@ -4,10 +4,11 @@
 ## Add libraries
 set(ROADMAP_LIB_SRC
 	src/road_coordinate.cpp
+	src/topogeo_graph.cpp
 	src/road_map.cpp
 )
 add_library(roadmap STATIC ${ROADMAP_LIB_SRC})
-target_link_libraries(roadmap decomp lanelet geometry)
+target_link_libraries(roadmap decomp graph lanelet geometry)
 target_include_directories(roadmap PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
