--- a/src/publication/selective_listening_acc/CMakeLists.txt
+++ b/src/publication/selective_listening_acc/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(pub_topogeo_graph gen_topogeo_graph.cpp)
 target_link_libraries(pub_topogeo_graph rank lightviz utilities)
 
 add_executable(pub_threat_ranking_case1 threat_ranking_case1.cpp)
-target_link_libraries(pub_threat_ranking_case1 rank roadmap tfield vehviz lightviz utilities)
+target_link_libraries(pub_threat_ranking_case1 rank roadmap tfield trafficviz lightviz utilities)
 
 add_executable(pub_threat_ranking_case2 threat_ranking_case2.cpp)
-target_link_libraries(pub_threat_ranking_case2 rank roadmap tfield vehviz lightviz utilities)
+target_link_libraries(pub_threat_ranking_case2 rank roadmap tfield trafficviz lightviz utilities)
