--- a/src/vehicle_nav/threat_ranking/tests/CMakeLists.txt
+++ b/src/vehicle_nav/threat_ranking/tests/CMakeLists.txt
@@ -6,4 +6,7 @@ add_executable(test_motion_model test_motion_model.cpp)
 target_link_libraries(test_motion_model rank lightviz utilities)
 
 add_executable(test_threat_ranking test_threat_ranking.cpp)
-target_link_libraries(test_threat_ranking rank roadmap tfield vehviz lightviz utilities)
+target_link_libraries(test_threat_ranking rank roadmap tfield trafficviz lightviz utilities)
+
+add_executable(test_tflow_map test_tflow_map.cpp)
+target_link_libraries(test_tflow_map rank roadmap tfield trafficviz lightviz utilities)
