road network discretization seems to work

--- a/src/publication/selective_listening_acc/CMakeLists.txt
+++ b/src/publication/selective_listening_acc/CMakeLists.txt
@@ -3,13 +3,13 @@
 
 # Add executables
 add_executable(show_vehicle_position show_vehicle_position.cpp)
-target_link_libraries(show_vehicle_position roadmap rank lightviz utilities)
+target_link_libraries(show_vehicle_position roadmap trafficmap lightviz utilities)
 
 add_executable(pub_topogeo_graph gen_topogeo_graph.cpp)
-target_link_libraries(pub_topogeo_graph roadmap rank lightviz utilities)
+target_link_libraries(pub_topogeo_graph roadmap trafficmap lightviz utilities)
 
 add_executable(pub_threat_ranking_case1 threat_ranking_case1.cpp)
-target_link_libraries(pub_threat_ranking_case1 roadmap rank roadmap tfield trafficviz lightviz utilities)
+target_link_libraries(pub_threat_ranking_case1 roadmap trafficmap roadmap tfield trafficviz lightviz utilities)
 
 add_executable(pub_threat_ranking_case2 threat_ranking_case2.cpp)
-target_link_libraries(pub_threat_ranking_case2 roadmap rank roadmap tfield trafficviz lightviz utilities)
+target_link_libraries(pub_threat_ranking_case2 roadmap trafficmap roadmap tfield trafficviz lightviz utilities)
