--- a/src/vehicle_nav/traffic_map/CMakeLists.txt
+++ b/src/vehicle_nav/traffic_map/CMakeLists.txt
@@ -2,15 +2,15 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 # Add libraries
-set(TRANKING_LIB_SRC
+set(TMAP_LIB_SRC
     src/motion_model.cpp
     src/threat_ranking.cpp
     src/traffic_flow.cpp
     src/traffic_map.cpp
 )
-add_library(rank STATIC ${TRANKING_LIB_SRC})
-target_link_libraries(rank decomp graph roadmap tfield lattice lattice_planner trafficviz lightviz)
-target_include_directories(rank PUBLIC
+add_library(trafficmap STATIC ${TMAP_LIB_SRC})
+target_link_libraries(trafficmap decomp graph roadmap tfield lattice lattice_planner trafficviz lightviz)
+target_include_directories(trafficmap PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
