--- a/src/core/planning/libtree/CMakeLists.txt
+++ b/src/core/planning/libtree/CMakeLists.txt
@@ -3,10 +3,16 @@
 
 # Add libraries
 add_library(tree INTERFACE)
-# target_sources(tree INTERFACE 
-# 	${CMAKE_CURRENT_SOURCE_DIR}/graph/graph.hpp
-# 	)
+target_sources(tree INTERFACE 
+	${CMAKE_CURRENT_SOURCE_DIR}/tree/tree_node.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/tree/basic_tree.hpp
+)
 # target_compile_definitions(tree INTERFACE -DUSE_UNORDERED_MAP -DMINIMAL_PRINTOUT)
 target_include_directories(tree INTERFACE
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 	$<INSTALL_INTERFACE:include>)
+
+if(BUILD_TESTS)
+	add_subdirectory(tests)
+endif()
+  
