--- a/src/navigation/uav_nav/CMakeLists.txt
+++ b/src/navigation/uav_nav/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(librav_vehicle_nav)
+project(librav_uav_nav)
 
 ## Set compiler to use c++ 11 features
 include(CheckCXXCompilerFlag)
@@ -38,16 +38,7 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
-add_subdirectory(road_map)
-add_subdirectory(threat_field)
-add_subdirectory(reachability)
-add_subdirectory(state_lattice)
-add_subdirectory(lattice_planner)
-add_subdirectory(traffic_map)
-add_subdirectory(traffic_sim)
-add_subdirectory(threat_ranking)
-
-add_subdirectory(traffic_viz)
+add_subdirectory(trajectory)
 
 
 
