code compiles, lattice planner seems not working

--- a/src/core/planning/CMakeLists.txt
+++ b/src/core/planning/CMakeLists.txt
@@ -38,6 +38,6 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(legacy)
 add_subdirectory(decomp)
 add_subdirectory(libtree)
-add_subdirectory(libgraph)
+add_subdirectory(graph)
 add_subdirectory(librrt)
 add_subdirectory(polyopt)
