finished map for a roundabout

--- a/src/navigation/ugv_nav/road_map/tests/CMakeLists.txt
+++ b/src/navigation/ugv_nav/road_map/tests/CMakeLists.txt
@@ -5,6 +5,9 @@
 add_executable(test_roadmap test_roadmap.cpp)
 target_link_libraries(test_roadmap roadmap lightviz utilities)
 
+add_executable(test_roadmap2 test_roadmap2.cpp)
+target_link_libraries(test_roadmap2 roadmap lightviz trafficviz utilities)
+
 add_executable(test_lane_collision test_lane_collision.cpp)
 target_link_libraries(test_lane_collision roadmap lightviz utilities)
 
