added one more app for selective listening

--- a/src/publication/selective_listening_acc/CMakeLists.txt
+++ b/src/publication/selective_listening_acc/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(pub_topogeo_graph cthreat roadmap trafficmap lightviz util
 add_executable(pub_topogeo_roundabout gen_topogeo_roundabout.cpp)
 target_link_libraries(pub_topogeo_roundabout cthreat roadmap trafficmap lightviz utilities)
 
+add_executable(pub_planning_true_field planning_true_field.cpp)
+target_link_libraries(pub_planning_true_field cthreat roadmap trafficmap roadmap tfield trafficviz lightviz utilities)
+
 add_executable(pub_threat_ranking_case1 threat_ranking_case1.cpp)
 target_link_libraries(pub_threat_ranking_case1 cthreat roadmap trafficmap roadmap tfield trafficviz lightviz utilities)
 
