updated bicycle model

--- a/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
@@ -7,7 +7,7 @@ set(LATTICE_LIB_SRC
   src/lattice_manager.cpp
 )
 add_library(lattice STATIC ${LATTICE_LIB_SRC})
-target_link_libraries(lattice graph geometry reachability utilities)
+target_link_libraries(lattice graph geometry model utilities)
 target_include_directories(lattice PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
