--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(common)
 add_subdirectory(interface)
 add_subdirectory(utilities)
 
+add_subdirectory(model)
 add_subdirectory(geometry)
 add_subdirectory(polynomial)
 add_subdirectory(planning)
