--- a/src/navigation/ugv_nav/lattice_planner/tests/CMakeLists.txt
+++ b/src/navigation/ugv_nav/lattice_planner/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(test_lattice_planner test_lattice_planner.cpp)
-target_link_libraries(test_lattice_planner lattice_planner tfield lightviz utilities)
+target_link_libraries(test_lattice_planner lattice_planner tfield lightviz trafficviz utilities)
 
 # add_executable(test_lattice_graph test_lattice_graph.cpp)
 # target_link_libraries(test_lattice_graph lattice)
