added supported to cairo draw

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,6 +10,8 @@ add_subdirectory(model)
 add_subdirectory(geometry)
 add_subdirectory(polynomial)
 add_subdirectory(planning)
+
 add_subdirectory(lightviz)
+add_subdirectory(fastdraw)
 
 add_subdirectory(examples)
