--- a/src/core/geometry/tests/CMakeLists.txt
+++ b/src/core/geometry/tests/CMakeLists.txt
@@ -4,3 +4,6 @@
 ## tests
 add_executable(test_polygon test_polygon.cpp)
 target_link_libraries(test_polygon geometry)
+
+add_executable(test_cspline test_cspline.cpp)
+target_link_libraries(test_cspline geometry)
