updated cspline, updated structure of core

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,11 +3,10 @@ project(librav_core)
 
 ## Add sub source directories
 add_subdirectory(common)
-add_subdirectory(interface)
 add_subdirectory(utilities)
 
-add_subdirectory(model)
 add_subdirectory(geometry)
+add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(lightviz)
 
