--- a/src/navigation/ugv_nav/road_map/CMakeLists.txt
+++ b/src/navigation/ugv_nav/road_map/CMakeLists.txt
@@ -5,6 +5,7 @@
 set(ROADMAP_LIB_SRC
 	src/road_coordinate.cpp
 	src/topogeo_graph.cpp
+	src/traffic_map.cpp
 	src/road_map.cpp
 )
 add_library(roadmap STATIC ${ROADMAP_LIB_SRC})
