--- a/src/core/lightviz/tests/CMakeLists.txt
+++ b/src/core/lightviz/tests/CMakeLists.txt
@@ -20,6 +20,9 @@ target_link_libraries(test_cspline_viz lightviz)
 add_executable(test_field_viz test_field_viz.cpp )
 target_link_libraries(test_field_viz lightviz)
 
+add_executable(test_pcurve_viz test_pcurve_viz.cpp)
+target_link_libraries(test_pcurve_viz lightviz)
+
 # add_executable(test_glfw_gui test_glfw_gui.cpp )
 # target_link_libraries(test_glfw_gui lightviz glfw)
 
