--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,8 +3,7 @@ project(librav_core)
 
 ## Add sub source directories
 add_subdirectory(common)
-add_subdirectory(geometry)
-add_subdirectory(trajectory)
+add_subdirectory(utilities)
 
 add_subdirectory(control)
 add_subdirectory(planning)
