--- a/src/core/planning/decomp/tests/CMakeLists.txt
+++ b/src/core/planning/decomp/tests/CMakeLists.txt
@@ -11,5 +11,8 @@ target_link_libraries(test_newgrid decomp)
 add_executable(test_dense_grid test_dense_grid.cpp)
 target_link_libraries(test_dense_grid decomp lightviz)
 
+add_executable(test_curvilinear_grid test_curvilinear_grid.cpp)
+target_link_libraries(test_curvilinear_grid decomp lightviz)
+
 # add_executable(test_decomposer test_decomposer.cpp)
 # target_link_libraries(test_decomposer decomp lightviz)
