--- a/src/core/planning/geometry/tests/CMakeLists.txt
+++ b/src/core/planning/geometry/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(test_polygon geometry)
 
 add_executable(test_cspline test_cspline.cpp)
 target_link_libraries(test_cspline geometry)
+
+add_executable(test_pcurve test_pcurve.cpp)
+target_link_libraries(test_pcurve geometry)
