added sample images for decomp: square grid and curvilinear grid

--- a/src/core/planning/decomp/tests/CMakeLists.txt
+++ b/src/core/planning/decomp/tests/CMakeLists.txt
@@ -14,5 +14,8 @@ target_link_libraries(test_dense_grid decomp lightviz)
 add_executable(test_curvilinear_grid test_curvilinear_grid.cpp)
 target_link_libraries(test_curvilinear_grid decomp lightviz)
 
+add_executable(test_square_grid test_square_grid.cpp)
+target_link_libraries(test_square_grid decomp lightviz)
+
 # add_executable(test_decomposer test_decomposer.cpp)
 # target_link_libraries(test_decomposer decomp lightviz)
