--- a/src/publication/CMakeLists.txt
+++ b/src/publication/CMakeLists.txt
@@ -30,4 +30,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 ## Add other sub source directories
 # add_subdirectory(selective_listening_acc)
-# add_subdirectory(connectivity_selection)
+add_subdirectory(connectivity_selection)
