--- a/src/navigation/ugv_nav/CMakeLists.txt
+++ b/src/navigation/ugv_nav/CMakeLists.txt
@@ -41,7 +41,7 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(road_map)
 add_subdirectory(reachability)
 add_subdirectory(state_lattice)
-add_subdirectory(lattice_planner)
+# add_subdirectory(lattice_planner)
 # add_subdirectory(traffic_map)
 # add_subdirectory(traffic_sim)
 # add_subdirectory(threat_field)
