--- a/src/publication/connectivity_selection/CMakeLists.txt
+++ b/src/publication/connectivity_selection/CMakeLists.txt
@@ -5,14 +5,17 @@
 # add_executable(gen_true_threat gen_true_threat.cpp)
 # target_link_libraries(gen_true_threat tfield ugvnav_viz lightviz utilities)
 
-add_executable(show_vehicle_position show_vehicle_position.cpp)
-target_link_libraries(show_vehicle_position cthreat roadmap trafficmap lightviz utilities)
+# add_executable(show_vehicle_position show_vehicle_position.cpp)
+# target_link_libraries(show_vehicle_position cthreat roadmap trafficmap lightviz utilities)
 
-add_executable(pub_topogeo_graph gen_topogeo_graph.cpp)
-target_link_libraries(pub_topogeo_graph cthreat roadmap trafficmap lightviz utilities)
+# add_executable(pub_topogeo_graph gen_topogeo_graph.cpp)
+# target_link_libraries(pub_topogeo_graph cthreat roadmap trafficmap lightviz utilities)
 
-add_executable(pub_topogeo_roundabout gen_topogeo_roundabout.cpp)
-target_link_libraries(pub_topogeo_roundabout cthreat roadmap trafficmap lightviz utilities)
+# add_executable(pub_topogeo_roundabout gen_topogeo_roundabout.cpp)
+# target_link_libraries(pub_topogeo_roundabout cthreat roadmap trafficmap lightviz utilities)
+
+add_executable(pub_roadmap_grid gen_roadmap_grid.cpp)
+target_link_libraries(pub_roadmap_grid roadmap lightviz ugvnav_viz utilities)
 
 # add_executable(pub_planning_true_field planning_true_field.cpp)
 # target_link_libraries(pub_planning_true_field cthreat roadmap trafficmap roadmap tfield ugvnav_viz lightviz utilities)
