saved work on lattice generator

--- a/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
@@ -5,15 +5,16 @@
 set(LATTICE_LIB_SRC
   # src/lattice_generator.cpp
   # src/lattice_manager.cpp
+  src/point_kinematics.cpp
   src/primitive_generator.cpp
 )
 add_library(lattice STATIC ${LATTICE_LIB_SRC})
-target_link_libraries(lattice graph geometry model utilities)
+target_link_libraries(lattice graph geometry model ascent utilities)
 target_include_directories(lattice PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
 if(BUILD_TESTS)
-  # add_subdirectory(tests)
+  add_subdirectory(tests)
 endif()
