fixed point kinematics model for lattice generator

--- a/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
@@ -4,6 +4,7 @@
 # Add libraries
 set(LATTICE_LIB_SRC
   src/point_kinematics.cpp
+  src/motion_primitive.cpp
   src/primitive_generator.cpp
 )
 add_library(lattice STATIC ${LATTICE_LIB_SRC})
