saved work on lattice

--- a/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(test_point_model test_point_model.cpp)
 target_link_libraries(test_point_model lattice ugvnav_viz)
 
 add_executable(test_primitive_gen test_primitive_gen.cpp)
-target_link_libraries(test_primitive_gen lattice)
+target_link_libraries(test_primitive_gen lattice ugvnav_viz)
