--- a/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(test_point_model lattice ugvnav_viz)
 
 add_executable(test_primitive_gen test_primitive_gen.cpp)
 target_link_libraries(test_primitive_gen lattice ugvnav_viz)
+
+add_executable(test_lookup_table test_lookup_table.cpp)
+target_link_libraries(test_lookup_table lattice ugvnav_viz)
