--- a/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_primitive_gen lattice ugvnav_viz)
 
 add_executable(test_lookup_table test_lookup_table.cpp)
 target_link_libraries(test_lookup_table lattice ugvnav_viz)
+
+add_executable(test_lattice_manager test_lattice_manager.cpp)
+target_link_libraries(test_lattice_manager lattice ugvnav_viz utilities)
