--- a/src/navigation/uav_nav/CMakeLists.txt
+++ b/src/navigation/uav_nav/CMakeLists.txt
@@ -38,6 +38,7 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
+add_subdirectory(polyopt)
 add_subdirectory(trajectory)
 
 
