--- a/src/navigation/uav_nav/CMakeLists.txt
+++ b/src/navigation/uav_nav/CMakeLists.txt
@@ -40,6 +40,6 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 ## Add other sub source directories
 add_subdirectory(polyopt)
 add_subdirectory(trajectory)
-
+# add_subdirectory(path_repair)
 
 
