--- a/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
+++ b/src/navigation/ugv_nav/state_lattice/CMakeLists.txt
@@ -16,6 +16,8 @@ target_include_directories(lattice PUBLIC
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
+add_subdirectory(apps)
+
 if(BUILD_TESTS)
   add_subdirectory(tests)
 endif()
