re-organized src structure

--- a/src/core_base/CMakeLists.txt
+++ b/src/core_base/CMakeLists.txt
@@ -6,9 +6,7 @@ add_subdirectory(common)
 add_subdirectory(control)
 add_subdirectory(decision)
 add_subdirectory(planning)
-
-add_subdirectory(lightviz)
-add_subdirectory(fastdraw)
+add_subdirectory(visualization)
 add_subdirectory(utilities)
 
 add_subdirectory(examples)
