--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,11 +31,11 @@ add_subdirectory(core_base)
 add_subdirectory(third_party)
 
 # Packages built on top of core
-add_subdirectory(robot_control)
+add_subdirectory(mcontrol)
 add_subdirectory(navigation)
 add_subdirectory(platforms)
 
-# Experiment setups
+# Publication-related code
 add_subdirectory(publication)
 
 ## Add test source directories
