--- a/src/kernel/planning/decomp/tests/CMakeLists.txt
+++ b/src/kernel/planning/decomp/tests/CMakeLists.txt
@@ -17,5 +17,8 @@ target_link_libraries(test_curvilinear_grid decomp lightviz)
 add_executable(test_square_grid test_square_grid.cpp)
 target_link_libraries(test_square_grid decomp lightviz)
 
+add_executable(test_decomp_memory test_decomp_memory.cpp)
+target_link_libraries(test_decomp_memory decomp)
+
 # add_executable(test_decomposer test_decomposer.cpp)
 # target_link_libraries(test_decomposer decomp lightviz)
