--- a/src/kernel/decision/markov/tests/CMakeLists.txt
+++ b/src/kernel/decision/markov/tests/CMakeLists.txt
@@ -2,5 +2,5 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-# add_executable(test_polygon test_polygon.cpp)
-# target_link_libraries(test_polygon geometry)
+add_executable(test_markov_chain test_markov_chain.cpp)
+target_link_libraries(test_markov_chain markov)
