--- a/src/navigation/ground/reachability/CMakeLists.txt
+++ b/src/navigation/ground/reachability/CMakeLists.txt
@@ -17,10 +17,11 @@ set(REACHABILITY_LIB_SRC
   src/monte_carlo_sim.cpp
   # Markov-model based occupancy
   src/tstate_transition_sim.cpp
+  src/car_longitudinal_model.cpp
 )
 add_library(reachability STATIC ${REACHABILITY_LIB_SRC})
 target_link_libraries(reachability decomp markov model random utilities ascent ${GSL_LIBRARIES})
-target_compile_definitions(reachability PUBLIC "-DEIGEN_STACK_ALLOCATION_LIMIT=0")
+# target_compile_definitions(reachability PUBLIC "-DEIGEN_STACK_ALLOCATION_LIMIT=0")
 target_include_directories(reachability PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
