--- a/src/navigation/ground/reachability/tests/CMakeLists.txt
+++ b/src/navigation/ground/reachability/tests/CMakeLists.txt
@@ -14,3 +14,5 @@ target_link_libraries(test_tstate_sim reachability utilities ugvnav_viz)
 add_executable(test_markov_occupancy test_markov_occupancy.cpp)
 target_link_libraries(test_markov_occupancy reachability utilities)
 
+add_executable(test_matrix test_matrix.cpp)
+# target_link_libraries(test_matrix)
