--- a/src/navigation/aerial/quadtraj/CMakeLists.txt
+++ b/src/navigation/aerial/quadtraj/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 if (GUROBI_FOUND)
 set(TRAJ_SRC     
     # src/path_manager.cpp
+    src/quad_flattraj.cpp
     src/quad_polyopt.cpp
     src/trajectory_manager.cpp
 )
