--- a/src/navigation/ground/threat_field/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/CMakeLists.txt
@@ -3,11 +3,10 @@
 
 # Add libraries
 set(TFIELD_LIB_SRC
-    src/threat_distribution.cpp
-    src/collision_field.cpp
+    src/collision_threat.cpp
 )
 add_library(tfield STATIC ${TFIELD_LIB_SRC})
-target_link_libraries(tfield decomp graph reachability)
+target_link_libraries(tfield decomp graph roadmap reachability)
 target_include_directories(tfield PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
