separated traffic map from road map module

--- a/src/navigation/ground/threat_field/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/CMakeLists.txt
@@ -6,7 +6,7 @@ set(TFIELD_LIB_SRC
     src/collision_threat.cpp
 )
 add_library(tfield STATIC ${TFIELD_LIB_SRC})
-target_link_libraries(tfield decomp graph roadmap reachability)
+target_link_libraries(tfield decomp graph roadmap traffic reachability)
 target_include_directories(tfield PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
