--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -39,11 +39,12 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
 add_subdirectory(road_map)
+add_subdirectory(traffic_map)
 add_subdirectory(reachability)
 add_subdirectory(state_lattice)
 add_subdirectory(lattice_planner)
 add_subdirectory(threat_field)
-# add_subdirectory(traffic_sim)
+add_subdirectory(traffic_sim)
 
 add_subdirectory(ugvnav_viz)
 
