--- a/src/navigation/ground/ugvnav_viz/CMakeLists.txt
+++ b/src/navigation/ground/ugvnav_viz/CMakeLists.txt
@@ -12,7 +12,7 @@ set(UGVNAV_VIZ_LIB_SRC
     # src/threat_field_viz.cpp
 )
 add_library(ugvnav_viz STATIC ${UGVNAV_VIZ_LIB_SRC})
-target_link_libraries(ugvnav_viz decomp roadmap lattice reachability tfield lightviz)
+target_link_libraries(ugvnav_viz decomp roadmap traffic lattice reachability tfield lightviz)
 target_include_directories(ugvnav_viz PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
