--- a/src/navigation/ground/road_map/CMakeLists.txt
+++ b/src/navigation/ground/road_map/CMakeLists.txt
@@ -5,12 +5,10 @@
 set(ROADMAP_LIB_SRC
 	src/road_coordinate.cpp
 	src/topogeo_graph.cpp
-	# src/traffic_channel.cpp
-	# src/traffic_map.cpp
 	src/road_map.cpp
 )
 add_library(roadmap STATIC ${ROADMAP_LIB_SRC})
-target_link_libraries(roadmap decomp graph lanelet geometry)
+target_link_libraries(roadmap decomp graph geometry lanelet)
 target_include_directories(roadmap PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
