--- a/src/navigation/ground/state_lattice/CMakeLists.txt
+++ b/src/navigation/ground/state_lattice/CMakeLists.txt
@@ -10,7 +10,7 @@ set(LATTICE_LIB_SRC
   src/state_lattice.cpp
 )
 add_library(lattice STATIC ${LATTICE_LIB_SRC})
-target_link_libraries(lattice graph geometry model ascent utilities)
+target_link_libraries(lattice geometry model ascent utilities)
 target_include_directories(lattice PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
