--- a/src/navigation/ground/threat_field/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/CMakeLists.txt
@@ -3,10 +3,11 @@
 
 # Add libraries
 set(TFIELD_LIB_SRC
+    src/vehicle_estimation.cpp
     src/collision_threat.cpp
 )
 add_library(tfield STATIC ${TFIELD_LIB_SRC})
-target_link_libraries(tfield decomp graph roadmap traffic reachability)
+target_link_libraries(tfield common decomp graph traffic reachability)
 target_include_directories(tfield PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
