--- a/src/navigation/ground/ugvnav_viz/tests/CMakeLists.txt
+++ b/src/navigation/ground/ugvnav_viz/tests/CMakeLists.txt
@@ -7,3 +7,6 @@
 
 add_executable(test_roadmap_viz test_roadmap_viz.cpp)
 target_link_libraries(test_roadmap_viz tfield ugvnav_viz lightviz utilities)
+
+add_executable(test_traffic_viz test_traffic_viz.cpp)
+target_link_libraries(test_traffic_viz tfield ugvnav_viz lightviz utilities)
