--- a/src/navigation/ground/threat_field/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/CMakeLists.txt
@@ -13,6 +13,8 @@ target_include_directories(tfield PUBLIC
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
+add_subdirectory(apps)
+
 if(BUILD_TESTS)
     add_subdirectory(tests)
 endif()
