--- a/src/navigation/ground/threat_field/apps/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/apps/CMakeLists.txt
@@ -2,5 +2,8 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-add_executable(app_compute_transition app_compute_transition.cpp)
-target_link_libraries(app_compute_transition tfield ugvnav_viz utilities)
+add_executable(app_calc_transition app_calc_transition.cpp)
+target_link_libraries(app_calc_transition tfield ugvnav_viz utilities)
+
+# add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
+# target_link_libraries(app_calc_interval_trans tfield ugvnav_viz utilities)
