--- a/src/navigation/ground/lattice_planner/tests/CMakeLists.txt
+++ b/src/navigation/ground/lattice_planner/tests/CMakeLists.txt
@@ -6,4 +6,7 @@
 # target_link_libraries(test_lattice_planner lattice_planner tfield lightviz ugvnav_viz utilities)
 
 add_executable(test_lattice_graph test_lattice_graph.cpp)
-target_link_libraries(test_lattice_graph lattice lattice_planner ugvnav_viz utilities)
+target_link_libraries(test_lattice_graph lattice_planner ugvnav_viz utilities)
+
+add_executable(test_lattice_threat test_lattice_threat.cpp)
+target_link_libraries(test_lattice_threat lattice_planner ugvnav_viz utilities)
